# savethespice

./: .flake8  .gitignore  .prettierignore  README.md  app.py  cdk.json  package-lock.json  package.json  pyproject.toml  setup.py
cdk/: savethespice_stack.py  secrets.py
public/: index.html
src/: App.css  App.js  Details.js  RecipeList.js  configureStore.js  firebase.js  index.css  index.js
src/actions/: index.js
src/backend/: auth.js  database.js  index.js  index.py
src/backend/apis/: __init__.py  auth.py  categories.py  recipes.py  scrape.py  shopping_list.py
src/backend/core/: auth.py  categories.py  recipes.py  shopping_list.py
src/backend/lib/: common.py  flask_lambda.py  types.py
src/backend/models/: __init__.py  common.py
src/backend/models/requests/: __init__.py  auth.py  categories.py  recipes.py  users.py
src/backend/models/responses/: __init__.py  auth.py  categories.py  recipes.py  scrape.py  users.py
src/backend/savethespice/: index.py
src/backend/savethespice/crud/: categories_table.py  common.py  meta_table.py  recipes_table.py  share_table.py
src/backend/savethespice/lib/: common.py  config.py
src/backend/savethespice/models/: __init__.py  common.py
src/backend/savethespice/models/requests/: __init__.py  auth.py  categories.py  recipes.py  share.py  users.py
src/backend/savethespice/models/responses/: __init__.py  auth.py  categories.py  recipes.py  share.py
src/backend/savethespice/routes/: auth.py  categories.py  recipes.py  share.py  shopping_list.py
src/components/: AddForm.css  AddForm.js  AddForm.scss  AddFormList.js  App.css  App.js  App.scss  App.test.js  Button.js  Button.scss  DeleteForm.js  DeleteForm.scss  Details.css  Details.js  Details.scss  Header.css  Header.js  Header.scss  Loader.js  Modal.js  Recipe.js  RecipeList.css  RecipeList.js  RecipeList.scss  RecipeLoader.js  ShoppingList.js  Sidebar.css  Sidebar.js  Sidebar.scss  SidebarItem.js  TextInput.js  TextInput.scss  index.scss  vars.scss
src/frontend/: .eslintrc.json  .prettierrc.json  .tmp.eslintrc.json  package-lock.json  package.json  preprocess_spec.py  tsconfig.json
src/frontend/public/: index.html
src/frontend/src/: App.tsx  config-overrides.ts  index.tsx  types.d.ts
src/frontend/src/backend/: database.js  operations.js
src/frontend/src/components/: AddForm.js  AddForm.scss  AddForm.tsx  AddFormList.js  App.js  App.scss  App.tsx  AuthForm.scss  AuthForm.tsx  Button.scss  Button.tsx  DeleteForm.js  DeleteForm.scss  DeleteForm.tsx  Details.js  Details.scss  Details.tsx  FlipButton.tsx  Header.js  Header.scss  Header.tsx  ImportForm.js  ImportForm.scss  ImportForm.tsx  Modal.js  Modal.scss  Modal.tsx  RecipeDetails.tsx  RecipeList.js  RecipeList.scss  RecipeList.tsx  RecipeLoader.js  RecipeLoader.tsx  ShoppingList.tsx  Sidebar.js  Sidebar.scss  Sidebar.tsx  SidebarItem.tsx  SidebarRecipeList.tsx  SignInForm.js  (+7 more)
src/frontend/src/components/Elements/: index.ts
src/frontend/src/components/Elements/DeleteConfirmation/: Confirmation.tsx  DeleteConfirmation.tsx  index.ts
src/frontend/src/components/Elements/FlipButton/: FlipButton.tsx  index.ts
src/frontend/src/components/Layout/: Header.tsx  Sidebar.tsx
src/frontend/src/config/: index.ts
src/frontend/src/features/auth/: index.ts
src/frontend/src/features/auth/api/: forgotPassword.ts  refreshIdToken.ts  signIn.ts  signOut.ts  signUp.ts
src/frontend/src/features/auth/components/: AuthForm.tsx
src/frontend/src/features/categories/: index.ts
src/frontend/src/features/categories/api/: createCategory.ts  deleteCategory.ts  getCategories.ts
src/frontend/src/features/categories/types/: index.ts
src/frontend/src/features/recipes/: index.ts
src/frontend/src/features/recipes/api/: createRecipe.ts  createRecipes.ts  deleteRecipe.ts  getRecipes.ts  scrape.ts  scrapeRecipe.ts  updateRecipe.ts
src/frontend/src/features/recipes/components/: AddRecipeForm.tsx  CreateRecipeForm.tsx  ImportRecipesForm.tsx  RecipeDetails.tsx  RecipeList.tsx
src/frontend/src/features/recipes/types/: index.ts
src/frontend/src/features/share/: index.ts
src/frontend/src/features/share/api/: getRecipeWithShareLink.ts  shareRecipe.ts
src/frontend/src/features/share/components/: ShareComponent.tsx  ShareWrapper.tsx
src/frontend/src/features/share/types/: index.ts
src/frontend/src/hooks/: index.ts  index.tsx
src/frontend/src/lib/: common.js  common.ts  context.js  hooks.ts  operations.ts  recipeSchema.json
src/frontend/src/lib/fetch/: index.ts
src/frontend/src/lib/fetch/core/: ApiError.ts  ApiRequestOptions.ts  CancelablePromise.ts  OpenAPI.ts  request.ts
src/frontend/src/lib/react-query/: index.ts
src/frontend/src/providers/: index.tsx
src/frontend/src/routes/: index.tsx
src/frontend/src/store/: index.tsx
src/frontend/src/stores/: index.ts
src/frontend/src/types/: index.ts
src/frontend/src/utils/: common.ts
src/js/: package-lock.json  package.json
src/js/public/: index.html
src/js/src/: configureStore.js  index.js
src/js/src/backend/: auth.js  database.js  operations.js
src/js/src/components/: AddForm.js  AddForm.scss  AddFormList.js  App.js  App.scss  Button.js  Button.scss  DeleteForm.js  DeleteForm.scss  Details.js  Details.scss  Header.js  Header.scss  ImportForm.js  ImportForm.scss  Modal.js  Modal.scss  Recipe.js  RecipeList.js  RecipeList.scss  RecipeLoader.js  Sidebar.js  Sidebar.scss  SidebarItem.js  SignInForm.js  SignInForm.scss  TextInput.js  TextInput.scss  _vars.scss  index.scss  vars.scss
src/js/src/lib/: common.js  context.js  recipeSchema.json
src/js/src/reducers/: recipeList.js
src/js/src/utils/: colors.js  common.js
src/py/: index.py
src/py/handlers/: auth.py  common.py  main.py
src/py/lib/: common.py  flask_lambda.py  types.py
src/py/ops/: auth.py  categories.py  recipes.py  shopping_list.py
src/reducers/: index.js  recipeList.js
src/utils/: colors.js  common.js  firebase.js
(+59 files in other folders)
