[tool.isort]
known_first_party = "common"
line_length = 100
multi_line_output = 3
profile = "black"
skip_gitignore = true

[tool.black]
line-length = 100

[tool.taskipy.tasks]
deploy = "poetry export -f requirements.txt --without-hashes > src/py/handlers/requirements.txt && task format && (cd src/js && npm run build) && cdk deploy --require-approval never"
format = "echo 'isort:' && isort .; echo 'black:' && black .; echo 'flake8:' && flake8; echo 'prettier:' && (cd src/js && npm run lint)"
lint = "task format"
release = "task format && task test"
synth = "task format && cdk synth"

[tool.poetry]
name = "SaveTheSpice"
version = "0.1.0"
description = "Recipe saver."
authors = ["Tim Coutinho <tmcoutinho42@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
boto3 = "^1.16.56"
boto3-type-annotations = "^0.3.1"
python = "~3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
"aws-cdk.aws-amplify" = "^1.85.0"
"aws-cdk.aws-apigateway" = "^1.85.0"
"aws-cdk.aws-cloudfront" = "^1.85.0"
"aws-cdk.aws-cloudfront-origins" = "^1.85.0"
"aws-cdk.aws-cognito" = "^1.85.0"
"aws-cdk.aws-dynamodb" = "^1.85.0"
"aws-cdk.aws-lambda" = "^1.85.0"
"aws-cdk.aws-lambda-python" = "^1.85.0"
"aws-cdk.aws-s3" = "^1.85.0"
"aws-cdk.aws-s3-deployment" = "^1.85.0"
"aws-cdk.core" = "^1.85.0"
awscli = "^1.18.216"
black = "^20.8b1"
boto3-type-annotations-with-docs = "^0.3.1"
diagrams = "^0.18.0"
flake8 = "^3.8.4"
isort = "^5.7.0"
taskipy = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
