[tool.isort]
combine_as_imports = true
known_first_party = "savethespice"
line_length = 100
multi_line_output = 3
profile = "black"
skip_gitignore = true

[tool.black]
line-length = 100

[tool.taskipy.tasks]
deploy = "poetry export -f requirements.txt --without-hashes > src/backend/requirements.txt && task format && (cd src/frontend && npm run build) && cdk deploy --require-approval never"
format = "echo 'isort:' && isort .; echo 'black:' && black .; echo 'flake8:' && flake8"
lint = "task format"
release = "task format && task test"
synth = "task format && cdk synth"
clean = "rm -r cdk.out src/frontend/build"
server = "images_bucket_name=savethespice-images recipes_table_name=SaveTheSpice-Recipes categories_table_name=SaveTheSpice-Categories meta_table_name=SaveTheSpice-Meta client_id=4qad1l5mjeq7r8lubp46cmd3cf user_pool_id=us-west-2_XTn0Chpmm UVICORN_PORT=8000 uvicorn savethespice.index:app  --app-dir src/backend --reload"

[tool.poetry]
name = "SaveTheSpice"
version = "0.1.0"
description = "Recipe saver."
authors = ["Tim Coutinho <tmcoutinho42@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
boto3 = "^1.16.56"
boto3-type-annotations = "^0.3.1"
flask-restx = "^0.5.1"
python = "~3.9"
recipe-scrapers = "^13.0.0"
requests = "^2.25.1"
MarkupSafe = "2.0.1"
itsdangerous = "2.0.1"
mangum = "^0.13.0"
fastapi = {extras = ["all"], version = "^0.74.1"}

[tool.poetry.dev-dependencies]
"aws-cdk.aws-apigateway" = "^1.132.0"
"aws-cdk.aws-cloudfront" = "^1.132.0"
"aws-cdk.aws-cloudfront-origins" = "^1.132.0"
"aws-cdk.aws-cognito" = "^1.132.0"
"aws-cdk.aws-dynamodb" = "^1.132.0"
"aws-cdk.aws-lambda" = "^1.132.0"
"aws-cdk.aws-lambda-python" = "^1.132.0"
"aws-cdk.aws-s3" = "^1.132.0"
"aws-cdk.aws-s3-deployment" = "^1.132.0"
"aws-cdk.core" = "^1.132.0"
black = "^22.0.0"
boto3-type-annotations-with-docs = "^0.3.1"
diagrams = "^0.18.0"
flake8 = "^4.0.0"
isort = "^5.7.0"
taskipy = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
